<resources>
    <string name="app_name">SMAN 14 Bandung</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sman_14_bandung">SMAN 14 BANDUNG</string>
    <string name="web">www.sman14bandung.sch.id</string>
    <string name="instagram">sman14bdg</string>
    <string name="fb">SMAN14BANDUNG</string>
    <string name="telp">(022)7202744</string>
    <string name="whatsapp">087822780277</string>
    <string name="default_picture_location">"@mipmap/tile"</string>
    <string name="todo">TODO</string>
    <string name="Open">Kalender</string>
    <string name="Close">Kalender</string>
    <string name="oktober">Oktober 2018</string>
    <string name="september_2018">September 2018</string>
    <string name="_15">15</string>
    <string name="_5">10</string>
    <string name="festival_budaya_2018">Festival Budaya 2018</string>
    <string name="_11">11</string>
    <string name="_20">20</string>
    <string name="kelas_ajar">Kelas Ajar : </string>
    <string name="class_meeting_2018">Class Meeting 2018</string>
    <string name="tahun_baru_islam">Tahun Baru Islam</string>
    <string name="pembelajaran_penyembelihan_hewan_qurban">Pembelajaran Penyembelihan Hewan Qurban</string>
    <string name="isiberita">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras vitae risus metus. Mauris imperdiet risus elit, eget scelerisque leo porta eu. Donec id metus non augue porta placerat. Morbi lorem dolor, aliquam eget metus sit amet, commodo porttitor lacus. Proin in hendrerit ex, non blandit ipsum. Fusce nec sollicitudin metus. Vivamus malesuada mauris nec neque dictum vulputate. Suspendisse cursus nunc sed arcu rutrum iaculis. Nullam cursus nec quam nec vehicula. Nam finibus tellus eu facilisis vulputate. Sed id hendrerit nulla. Sed non malesuada nibh, id maximus lectus. Aliquam est arcu, cursus eget tempus nec, vulputate non diam. Proin dignissim convallis metus, vitae pharetra ante fermentum vitae.
Nam dictum, ipsum in laoreet posuere, neque erat pellentesque ex, placerat dictum nisl metus sed lacus. Morbi vestibulum convallis consectetur. Sed nec tortor vel nibh facilisis aliquam. Etiam ornare, magna eget cursus mattis, arcu metus blandit neque, ac cursus erat tortor nec turpis. Cras blandit nec sapien sed lacinia. Quisque a nisi nec tellus tristique porttitor gravida vitae tortor. Curabitur vitae lacus pellentesque, ornare ex et, volutpat lacus. Ut vel dolor ac dolor molestie dapibus egestas non felis. Donec tempus gravida justo, vitae ultricies quam posuere vitae. Curabitur viverra nisl vel ornare gravida. Phasellus ut vehicula massa. Cras at purus eget nisi bibendum accumsan sed nec arcu.
Etiam ac convallis nisl. Curabitur eu commodo metus. Duis ultricies ut dui sed gravida. Etiam sollicitudin eleifend tortor. Vivamus congue mollis velit, ut ultrices neque faucibus in. Curabitur mollis, purus eget finibus mattis, tortor mauris efficitur tellus, maximus placerat dolor leo eleifend massa. Fusce vel turpis est. Ut ac ullamcorper purus.
\n\n\n\n
Aenean sed leo vulputate, pulvinar nunc eget, tempor orci. Quisque neque ipsum, congue et arcu non, vehicula pretium metus. Ut odio sem, porta sit amet mollis eu, egestas nec velit. Praesent facilisis tortor nisi, a lobortis odio gravida at. Duis vel accumsan diam. Morbi elit eros, fringilla id commodo sed, rutrum non nunc. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Nam at facilisis ante, vitae mattis augue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer congue tortor nisl, a vulputate augue tempus eu.
    </string>
    <string name="title_activity_guru_drawer">GuruDrawerActivity</string>
    <string name="kepala_sekolah">Kepala Sekolah</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="detil_berita">Detail Berita</string>
    <string name="detil_acara">Detail Acara</string>
    <string name="detil_prestasi">Detail Prestasi</string>
    <string name="detil_profile">Profile Sekolah</string>
    <string name="detil_fasilitas">Fasilitas</string>
    <string name="fasilitas">Fasilitas</string>
    <string name="detail_fasilitass">Detail Fasilitas</string>
    <string name="eskul">Ekstrakulikuler</string>
    <string name="ekstra">Detail Ekstrakulikuler</string>
    <string name="third"><u>Dukungan Pihak Ketiga</u></string>
    <string name="baca_selengkapnya">Baca Selengkapnya..</string>
    <string name="visi_sman14">Terwujud sumber daya manusia yang berakhlak mulia, cerdas, dan produktif, serta berbudaya lingkungan.
        \n
-	Berakhlak mulia adalah mereka yang religius, beretika, toleran serta memiliki kecerdasan emosional dan sprirual.\n
-	Cerdas adalah mereka yang memiliki keunggulan, kritis, mandiri, kreatif dan inovatif.\n
-	Produktif adalah mereka yang proaktif, partisipatif, apresiasitif, aktualitatif, dan profitable.\n
-	Berbudaya Lingkungan adalah mereka yang memiliki kepedulian dalam memelihara dan menjaga kelestraian lingkungan berkaitan dengan kebersihan,, Ketertiban, Keindahan, Kenyamanan, Kekeluargaan, Kesehatan, dan kerindangan (K7) dilingkungannya\n
</string>
    <string name="misi_sman14">1.	Meningkatan mutu pendidikan sesuai dengan perkembangan kebutuhan masyarakat/ stakeholders.\n
2.	Mengembangkan, infrastruktur, dan sarana pendidikan melalui pembangunan, pemeliharaan serta pemanfaatan, infra struktur dan sarana pendidikan dikembangkan sesuai kebutuhan. \n
3.	Meningkatan kinerja dan layanan pendidikan secara optimal sesuai dengan tugas pokok dan fungsinya, sehingga tercipta produktivitas dan layanan prima. \n
4.	Meningkatan profesionalisme tenaga kependidikan sehingga  memiliki kompetensi sesuai dengan tugas dan proyeksinya. \n
5.	Mengembangan manajemen pendidikan melalui pengelolaan pendidikan dengan memanfaatkan sumber daya manusia dan sumber daya lainnya serta partisipasi masyarakat yang dikelola secara efesien dan efektif. \n
6.	Memanfaatan teknologi informasi dan komunikasi, sehingga tercipta sistem informasi yang cepat, tepat dan akurat. \n
7.	Memelihara dan menjaga kelestraian lingkungan berkaitan dengan kebersihan, ketertiban, keindahan, kenyamanan, kekeluargaan, kesehatan dan, kerindangan(K7). \n
</string>
    <string name="tujuan_sman14">SMA Negeri 14 Bandung sebagai bagian dari pendidikan nasional memiliki tujuan: meningkatkan kecerdasan, pengetahuan, kepribadian, akhlak mulia, keterampilan untuk hidup mandiri, yang peduli dan berbudaya lingkungan  untuk dapat mengikuti pendidikan lebih lanjut.</string>
    <string name="target_sman14"> 1. Menunjukan sekolah sebagai pusat kebudayaan, pembaharuan dan perubahan\n
2.	Mengembangkan kemampuan dan potensi siswa agar menjadi manusia yang beriman bertakwa, berilmu dan berakhlak mulia\n
3.	Memberikan keterampilan dan kecakapan hiduip kepada siswa agar menjadi manusia yang cakap, kreatif, disiplin, mandiri dan memiliki rasa tanggung jawab yang tinggi\n
4.	Mempersiapkan siswa agar memiliki kompetensi dan daya saing, sehingga dapat melanjutkan kejenjang pendidikan yang lebih tinggi. Memberikan bekal kemampuan dasar Humaniora dan agama agar para siswa dapat  mengembangkan sikap dan nilai hidup bersama. \n
5.	Mengembangkan sekolah sebagai pusat kebudayaan, pembaharuan dan perubahan\n
6.	Mengembangkan kemampuan siswa dalam memelihara dan menjaga kelestraian lingkungan berkaitan dengan kebersihan, ketertiban, keindahan, kenyamanan, kekeluargaan, kesehatan dan, kerindangan(K7) di lingkungannya. \n
7.	Mengembangkan kemampuan dan potensi siswa agar menjadi manusia yang beriman bertakwa, berilmu dan berakhlak mulia . \n
8.	Memberikan keterampilan dan kecakapan hiduip kepada siswa agar menjadi manusia yang cakap, kreatif, disiplin, mandiri dan memiliki rasa tanggung jawab yang tinggi . \n
9.	Mempersiapkan siswa agar memiliki kemampuan dasar untuk melanjutkan pendidikan ke jenjang yang lebih tinggi/ Perguruan Tinggi . \n
10.	Memberikan bekal kemampuan dasar Humainor dan agama untuk mengembangkan sikap dan nilai hidup bersama . \n
11.	Terselenggaranya Sekolah berbasis Teknonolgi Informasi. Seluruh proses pembelajaran di dukung oleh sarana dan prasarana yang berbasi Sistem Informasi yang terintegrasi. \n
</string>
</resources>
